# scribbleslm

./: .env.example  .gitignore  BACKLOG.md  LICENSE  README.md  SKILL.md  docker-compose.yml  pyproject.toml
src/scribbleslm/: config.py  costs.py  db.py  ingest.py  query.py  reranker.py  reranker_worker.py  routing.py  server.py  sources.py
src/scribbleslm/embeddings/: __init__.py  base.py  bge_gguf.py  dispatcher.py  voyage.py
src/scribbleslm/induction/: __init__.py  cache.py  ladder.py  linemine.py  profile.py  validate.py
src/scribbleslm/profiles/: ukrainian_statute.yaml
tests/: test_chunking.py  test_dispatcher.py  test_doc_atomic.py  test_reranker.py  test_routing.py  test_schema.py  test_security.py  test_status.py
