[project]
name = "scribbleslm"
version = "0.1.0"
description = "Notebook-scoped RAG with contextual retrieval, delivered as an MCP server"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]",
  "openai",
  "pgvector",
  "psycopg[binary]",
  "trafilatura",
  "pymupdf",
  "tiktoken",
  "httpx",
]

[project.scripts]
scribbleslm = "scribbleslm.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribbleslm"]
