[project]
name = "scribbleslm"
version = "0.2.0"
description = "Notebook-scoped RAG with sensitivity-routed embeddings, delivered as an MCP server"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]",
  "voyageai",          # public embedding path (voyage-context-3)
  "openai",            # DeepSeek contextualization, private path only
  "sqlite-vec",        # vector index
  "llama-cpp-python",  # local bge-m3-GGUF, private path
  "tenacity",          # backoff for the async dispatcher (R1)
  "trafilatura",
  "pymupdf",
  "tiktoken",
  "httpx",
]

[project.scripts]
scribbleslm = "scribbleslm.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribbleslm"]

[tool.uv]
# llama-cpp-python prebuilt CPU wheels (box has no cmake to build from sdist)
extra-index-url = ["https://abetlen.github.io/llama-cpp-python/whl/cpu"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
